--- a/src/res/template.html
+++ b/src/res/template.html
@@ -2,17 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>title</title>
+    <title>Pyrics</title>
     <style type="text/css" media="print">
       body {
         width: 21cm;
         height: 29.7cm;
-        margin: 30mm 45mm 30mm 45mm;
-        /* change the margins as you want them to be. */
+        margin: 10mm 10mm 10mm 10mm;
+      }
+      .song {
+        display: grid;
+        grid-template-rows: repeat(1, 270mm);
+        grid-template-columns: repeat(2, 100mm);
       }
     </style>
   </head>
   <body>
-    <!-- page content -->
+    <content />
   </body>
 </html>
